[gd_scene load_steps=5 format=2]

[ext_resource path="res://games/reaper/player/reaperplayer.gd" type="Script" id=1]
[ext_resource path="res://addons/opensusinteraction/resources/interactui/interactui.gd" type="Script" id=2]

[sub_resource type="Resource" id=1]
resource_local_to_scene = true
script = ExtResource( 2 )
ui_path = "res://games/reaper/ui/dash_ui/dash_ui.tscn"
ui_data = {

}
action = 0
free_on_close = false
advanced/reinstance = false
advanced/only_instance = false

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( -10, -10, -10, 10, 10, 0 )

[node name="reaperplayer" type="KinematicBody2D" groups=[
"players",
]]
collision_mask = 0
script = ExtResource( 1 )
dash_ui = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( -10, 10, 10, 10, 0, -10 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 10, 0 )
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
explosiveness = 0.75
lifetime_randomness = 0.5
local_coords = false
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
scale_amount = 5.0
scale_amount_random = 1.0

[node name="Position2D" type="Position2D" parent="."]

[node name="name_label" type="Label" parent="Position2D"]
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
text = "asd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
